# HPC-Project

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.parallel  Makefile.serial  README.md  job.sh  job.sh.e5035158  job.sh.e5035162  job.sh.e51636  job.sh.e51653  job.sh.o5033945  job.sh.o5035158  job.sh.o5035162  job.sh.o51636  job.sh.o51653  scalability_16_1.o5035515  scalability_16_2.o5035519  scalability_2.o5035458  scalability_2.o5035636  scalability_32_1.o5035516  scalability_32_2.o5035520  scalability_4.o5035459  scalability_4.o5035637  scalability_8_1.o5035517  scalability_8_2.o5035518  sync_to_hpc.sh  t_serial_131072.o52929  time_1024.o5034847  time_16.o52857  time_16.o64645  time_16384.o5035039  time_16_131072.o55374  time_16_65536.o53175  time_2.o51367  time_2.o52790  time_2.o64641  time_2048.o5034848  time_2_65536.o55704  (+20 more)
benchmark/: pack-excl-report.txt  pack-report.txt  plot.py  scatter-excl-report.txt  scatter-report.txt
data/: input.txt  test_10000.csv  test_2000.csv  test_3000.csv  test_5000.csv  test_750.csv
data/accuracy/: test_1000_1_clustered.csv
data/input/: test_1000.csv  test_10000.csv  test_1024.csv  test_1500.csv  test_16384.csv  test_2000.csv  test_20000.csv  test_2048.csv  test_3000.csv  test_32768.csv  test_4096.csv  test_500.csv  test_5000.csv  test_512.csv  test_65536.csv  test_750.csv  test_7500.csv  test_8192.csv
data/output/: test_1000.csv  test_10000.csv  test_1000_clustered.csv  test_1024.csv  test_1024_clustered.csv  test_131072.csv  test_131072_clustered.csv  test_1500.csv  test_16384.csv  test_16384_clustered.csv  test_2000.csv  test_2000_clustered.csv  test_2048.csv  test_2048_clustered.csv  test_3000.csv  test_3000_clustered.csv  test_32768.csv  test_32768_clustered.csv  test_4096.csv  test_4096_clustered.csv  test_500.csv  test_5000.csv  test_500_clustered.csv  test_512.csv  test_512_clustered.csv  test_65536.csv  test_65536_clustered.csv  test_7500.csv  test_750_clustered.csv  test_8192.csv  test_8192_clustered.csv
include/: common.hpp  constants.hpp  csv.hpp  k_means.hpp  similarity_matrix.hpp  spectral_clustering.hpp
references/: similarity-matrix.txt
src/: csv.cpp  k_means.cpp  main.cpp  prova  prova.cpp  similarity_matrix.cpp  spectral_clustering.cpp
src/parallel/: csv.cpp  (+4 more)
tools/: generator.py  plotter.py  robustness.py
(+9 files in other folders)
